--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "print_perf"
-version = "0.1.2"
+version = "0.1.3"
 authors = ["Carl Fredrik Samson <cf@samson.no>"]
 edition = "2018"
 description = """
@@ -8,7 +8,7 @@ Ergonomic print optimization for Rust. This crate will provide a struct and a
 helper macro that you can use to measure and print out the time between two 
 points in your code.
 """
-documentation = "https://github.com/cfsamson/print-perf"
+documentation = "https://docs.rs/print_perf/0.1.3/print_perf/"
 homepage = "https://github.com/cfsamson/print-perf"
 repository = "https://github.com/cfsamson/print-perf"
 readme = "README.md"
